--- a/docs/swagger/docker-compose.yml
+++ b/docs/swagger/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "8082:8080"
     volumes:
-      - ./swagger/swagger.json:/swagger.json
+      - ./swagger.json:/swagger.json
     environment:
       SWAGGER_JSON: /swagger.json
       # API_URL: ""
@@ -23,4 +23,4 @@ services:
   #   ports:
   #     - "8083:8000"
   #   volumes:
-  #     - ./swagger:/data
+  #     - .:/data
