--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       DATABASE_PORT: 5432
     volumes:
       - ./app/:/home/mtaa/app/
+      - ./public/images/:/public/images/
     ports:
       - "8000:8000"
     depends_on:
