filestore as volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       DATABASE_PORT: 5432
     volumes:
       - ./app/:/home/mtaa/app/
+      - filestore:/home/mtaa/filestore/
     ports:
       - "8000:8000"
     depends_on:
@@ -39,3 +40,4 @@ services:
       
 volumes:
   mtaa-db-data:
+  filestore:
