--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-uvicorn
-fastapi
-psycopg2-binary
-sqlalchemy
-python-multipart
+uvicorn==0.21.1
+fastapi==0.95.0
+psycopg2-binary==2.9.5
+sqlalchemy==2.0.7
+python-multipart==0.0.6
+pylint==2.16.2
