Add websockets support - Removed remaining old files - Custom websocket manager - Automated tests for websockets
How to run tests:
`docker exec -it mtaa-be-app python3 -m pytest`

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ humps==0.2.2
 httpx==0.23.3
 faker==18.4.0
 filetype==1.2.0
+websockets==11.0.2
 python-jose[cryptography]
 passlib[bcrypt]
 pydantic[email]
